# dinomail

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  dev-requirements.txt  docker-compose.yml  index.html  index_fr.html  pyproject.toml  requirements.txt  styles.css
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: django.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  linking.rst  quickstart.rst
src/: install.sh  manage.py
src/api/: api.py  apps.py  tests.py  urls.py
src/core/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  utils_argon.py  utils_bcrypt.py  utils_passlib.py  views.py
src/core/locale/fr/LC_MESSAGES/: django.po
src/core/migrations/: 0001_initial.py  0002_auto_20200604_1836.py  0003_auto_20200616_1132.py  0004_auto_20200616_1218.py
src/core/templates/: autoconfig.xml  base.html  footer.html  form.html  home.html  legals.html  login.html  nav.html  search.html  table_aliases.html  table_domains.html  table_users.html  virtual_aliases_index.html  virtual_domains_dkim_scan.html  virtual_domains_dmarc_scan.html  virtual_domains_index.html  virtual_domains_spf_scan.html  virtual_users_index.html
src/dinomail/: asgi.py  local_settings.docker.py  local_settings.example.py  processors.py  settings.py  urls.py  wsgi.py
src/dinomail/locale/fr/LC_MESSAGES/: django.po
