[tool.poetry]
name = "dinomail"
version = "1.1.1"
description = "DinoMail is a hungry dino managing emails"
authors = ["Yoann Piétri <me@nanoy.fr>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3,<4"
django-bootstrap4 = "^22.3"
psycopg2 = "^2.9.5"
dnspython = "^2.2.1"
django-tastypie = "^0.14.4"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
rope = "^1.6.0"
pylint = "^2.15.9"
pylint-django = "^2.5.3"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
coverage = "<5"
coveralls = "^3.3.1"
pyyaml = "^6.0"
bcrypt = "^4.0.1"
passlib = "^1.7.4"
argon2-cffi = "^21.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
